--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint ./ --ext .vue,.js,.cjs",
-        "lint:fix": "eslint --ext .vue,.js,.cjs --fix --ignore-path .gitignore",
+        "lint": "eslint --ext .vue,.js,.cjs --fix --ignore-path .gitignore",
         "format": "prettier 'resources/{views,js,ts,jsx}/**/*.{js,ts,jsx,vue}' --write"
     },
     "devDependencies": {
